# refactoring

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Aliases.hpp  Board.hpp  IBoard.hpp  IPlayer.hpp  ISquare.hpp  IStrategy.hpp  Monopoly.hpp  Player.hpp  Squares.hpp  Strategy.hpp
source/: main.cpp
tests/: tests.cpp
